<resources>
    <string name="app_name">BCS421IndividualProj1</string>

    <string name="login">Login</string>
    <string name="register_action">Register</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="f_Name">First Name</string>
    <string name="l_Name">Last Name</string>
    <string name="create_Account">Create An Account</string>
    <string name="forgot_password">Forgot Password? </string>
    <string name="No_Account">"Don't have an account?"</string>
    <string name="Sign_Up_Link">Sign up!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="title_activity_login">Sign in</string>
    <string name="dateOfbirth">mm/dd/yyyy</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="passConfirm">Confirm Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
