<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    tools:context=".register.RegisterActivity">


    <EditText
        android:id="@+id/fName"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/f_Name"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:imeActionLabel="@string/f_Name"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />


    <EditText
        android:id="@+id/lName"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/l_Name"
        android:imeActionLabel="@string/l_Name"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fName"
        app:layout_constraintVertical_bias="0.089" />


    <EditText
        android:id="@+id/dateOfbirth"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/dateOfbirth"
        android:imeActionLabel="@string/l_Name"
        android:imeOptions="actionDone"
        android:inputType="text|date"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lName"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/email"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:imeActionLabel="@string/email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateOfbirth"
        app:layout_constraintVertical_bias="0.122" />

    <EditText
        android:id="@+id/password"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:imeActionLabel="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateOfbirth"
        app:layout_constraintVertical_bias="0.267" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/passConfirm"
        android:imeActionLabel="@string/passConfirm"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/button2"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:background="@drawable/mybuttons"
        android:text="@string/register_action"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_Account"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

</androidx.constraintlayout.widget.ConstraintLayout>